updated slider width for mobile, and fixed overflow for iphone 5

--- a/main.css
+++ b/main.css
@@ -254,13 +254,18 @@ input:-webkit-autofill {
     }
 }
 @media (max-width: 350px) {
+    body {
+      overflow-x: hidden;
+    }
+
     .btn-about,
     .box,
     .title-container,
     .content-left,
     .header,
     .main-content-container,
-    .container-fluid {
+    .container-fluid
+    .slider {
         width: 320px;
     }
     .container-fluid {
